# Copyright (c) 2021 AlgoIdeas.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

executable("LVGL.Simulator") {
    sources = [
        "//USER/App/Common/DataProc/DP_Recorder.cpp",
        "//USER/App/Common/DataProc/DP_Clock.cpp",
        "//USER/App/Common/DataProc/DP_SportStatus.cpp",
        "//USER/App/Common/DataProc/DP_Storage.cpp",
        "//USER/App/Common/DataProc/DP_MusicPlayer.cpp",
        "//USER/App/Common/DataProc/DP_TzConv.cpp",
        "//USER/App/Common/DataProc/DP_Power.cpp",
        "//USER/App/Common/DataProc/DP_SysConfig.cpp",
        "//USER/App/Common/DataProc/DP_TrackFilter.cpp",
        "//USER/App/Common/DataProc/DataProc.cpp",
        "//USER/App/Common/DataProc/DP_MAG.cpp",
        "//USER/App/Common/DataProc/DP_GPS.cpp",
        "//USER/App/Common/DataProc/DP_IMU.cpp",
        "//USER/App/Common/HAL/HAL_Audio.cpp",
        "//USER/App/Common/HAL/HAL_SD_CARD.cpp",
        "//USER/App/Common/HAL/HAL_Encoder.cpp",
        "//USER/App/Common/HAL/HAL_Power.cpp",
        "//USER/App/Common/HAL/HAL_MAG.cpp",
        "//USER/App/Common/HAL/HAL_Clock.cpp",
        "//USER/App/Common/HAL/HAL_Buzz.cpp",
        "//USER/App/Common/HAL/HAL_GPS.cpp",
        "//USER/App/Common/HAL/HAL_IMU.cpp",
        "//USER/App/Common/HAL/HAL.cpp",
        "//USER/App/Utils/GPX_Parser/GPX_Parser.cpp",
        "//USER/App/Utils/MapConv/MapConv.cpp",
        "//USER/App/Utils/MapConv/TileSystem/TileSystem.cpp",
        "//USER/App/Utils/lv_ext/lv_obj_ext_func.cpp",
        "//USER/App/Utils/lv_ext/lv_label_anim_effect.cpp",
        "//USER/App/Utils/Stream/Print.cpp",
        "//USER/App/Utils/Stream/Stream.cpp",
        "//USER/App/Utils/PageManager/PM_Base.cpp",
        "//USER/App/Utils/PageManager/PM_Anim.cpp",
        "//USER/App/Utils/PageManager/PM_State.cpp",
        "//USER/App/Utils/PageManager/PM_Drag.cpp",
        "//USER/App/Utils/PageManager/ResourceManager.cpp",
        "//USER/App/Utils/PageManager/PM_Router.cpp",
        "//USER/App/Utils/TileConv/TileConv.cpp",
        "//USER/App/Utils/TrackFilter/TrackPointFilter.cpp",
        "//USER/App/Utils/TrackFilter/TrackLineFilter.cpp",
        "//USER/App/Utils/TonePlayer/TonePlayer.cpp",
        "//USER/App/Utils/WString/WString.cpp",
        "//USER/App/Utils/DataCenter/Account.cpp",
        "//USER/App/Utils/DataCenter/DataCenter.cpp",
        "//USER/App/Utils/GPX/GPX.cpp",
        "//USER/App/Utils/Time/Time.cpp",
        "//USER/App/Utils/Time/DateStrings.cpp",
        "//USER/App/Utils/StorageService/StorageService.cpp",
        "//USER/App/Pages/SystemInfos/SystemInfosView.cpp",
        "//USER/App/Pages/SystemInfos/SystemInfosModel.cpp",
        "//USER/App/Pages/SystemInfos/SystemInfos.cpp",
        "//USER/App/Pages/Startup/StartupView.cpp",
        "//USER/App/Pages/Startup/Startup.cpp",
        "//USER/App/Pages/Startup/StartupModel.cpp",
        "//USER/App/Pages/StatusBar/StatusBar.cpp",
        "//USER/App/Pages/Dialplate/DialplateModel.cpp",
        "//USER/App/Pages/Dialplate/Dialplate.cpp",
        "//USER/App/Pages/Dialplate/DialplateView.cpp",
        "//USER/App/Pages/_Template/Template.cpp",
        "//USER/App/Pages/_Template/TemplateModel.cpp",
        "//USER/App/Pages/_Template/TemplateView.cpp",
        "//USER/App/Pages/LiveMap/LiveMapView.cpp",
        "//USER/App/Pages/LiveMap/LiveMapModel.cpp",
        "//USER/App/Pages/LiveMap/LiveMap.cpp",
        "//USER/App/Pages/AppFactory.cpp",
        "//USER/App/App.cpp",
        "//USER/App/Resource/ResourcePool.cpp",
        "//Simulator/LVGL.Simulator/LVGL.Simulator.cpp",
        "//USER/App/Utils/MapConv/GPS_Transform/GPS_Transform.c",
        "//USER/App/Utils/lv_ext/lv_anim_timeline_wrapper.c",
        "//USER/App/Utils/WString/dtostrf.c",
        "//USER/App/Utils/DataCenter/PingPongBuffer/PingPongBuffer.c",
        "//USER/App/Resource/Image/img_src_origin_point.c",
        "//USER/App/Resource/Image/img_src_bicycle.c",
        "//USER/App/Resource/Image/img_src_pause.c",
        "//USER/App/Resource/Image/img_src_start.c",
        "//USER/App/Resource/Image/img_src_storage.c",
        "//USER/App/Resource/Image/img_src_gyroscope.c",
        "//USER/App/Resource/Image/img_src_sd_card.c",
        "//USER/App/Resource/Image/img_src_locate.c",
        "//USER/App/Resource/Image/img_src_map_location.c",
        "//USER/App/Resource/Image/img_src_gps_pin.c",
        "//USER/App/Resource/Image/img_src_gps_arrow_default.c",
        "//USER/App/Resource/Image/img_src_gps_arrow_dark.c",
        "//USER/App/Resource/Image/img_src_gps_arrow_light.c",
        "//USER/App/Resource/Image/img_src_trip.c",
        "//USER/App/Resource/Image/img_src_compass.c",
        "//USER/App/Resource/Image/img_src_system_info.c",
        "//USER/App/Resource/Image/img_src_time_info.c",
        "//USER/App/Resource/Image/img_src_battery.c",
        "//USER/App/Resource/Image/img_src_stop.c",
        "//USER/App/Resource/Image/img_src_battery_info.c",
        "//USER/App/Resource/Image/img_src_menu.c",
        "//USER/App/Resource/Image/img_src_alarm.c",
        "//USER/App/Resource/Image/img_src_satellite.c",
        "//USER/App/Resource/Font/font_bahnschrift_65.c",
        "//USER/App/Resource/Font/font_agencyb_36.c",
        "//USER/App/Resource/Font/font_bahnschrift_32.c",
        "//USER/App/Resource/Font/font_bahnschrift_17.c",
        "//USER/App/Resource/Font/font_bahnschrift_13.c",
    ]

    include_dirs = [
        "//Simulator/LVGL.Simulator/",
        "//USER/App/",
        "//USER/App/Utils/ArduinoJson/src",
        "//USER/App/Utils/MapConv",
    ]

    deps = [
        ":lvgl"
    ]

    cflags_c = [
        "-std=c99"
    ]

    cflags_cc = [
        "-std=gnu++11"
    ]
        
    cflags = [
        "-D_GNU_SOURCE",
        "-pthread",
        "-DLINUX",
        "-DUSE_WIN32DRV=0",
        "-DUSE_FBDEV=1"
    ]

    if (chip_type == "hi3559v200") {
        cflags += [
            "-DLV_FS_POSIX_PATH=\"/app/sd\"",
            "-DLV_HOR_RES=320",
            "-DLV_VER_RES=240",
            "-DDISP_HOR_RES=320",
            "-DDISP_VER_RES=240",
        ]
    } else {
        cflags += [
            "-DLV_FS_POSIX_PATH=\".\"",
            "-DLV_HOR_RES=240",
            "-DLV_VER_RES=240",
            "-DDISP_HOR_RES=240",
            "-DDISP_VER_RES=240"
        ]
    }

    ldflags = [
    ]

    if (is_linux) {
        ldflags += [
            "-D_GNU_SOURCE",
            "-pthread",
            "-lm"
        ]
    }

    output_dir = "${root_out_dir}"
}

static_library("lvgl") {
    sources = [
        "//Simulator/LVGL.Simulator/lvgl/src/draw/lv_img_cache.c",
        "//Simulator/LVGL.Simulator/lvgl/src/draw/lv_draw_mask.c",
        "//Simulator/LVGL.Simulator/lvgl/src/draw/lv_draw_triangle.c",
        "//Simulator/LVGL.Simulator/lvgl/src/draw/lv_draw_img.c",
        "//Simulator/LVGL.Simulator/lvgl/src/draw/lv_img_buf.c",
        "//Simulator/LVGL.Simulator/lvgl/src/draw/lv_draw_arc.c",
        "//Simulator/LVGL.Simulator/lvgl/src/draw/lv_draw_blend.c",
        "//Simulator/LVGL.Simulator/lvgl/src/draw/lv_draw_line.c",
        "//Simulator/LVGL.Simulator/lvgl/src/draw/lv_draw_rect.c",
        "//Simulator/LVGL.Simulator/lvgl/src/draw/lv_draw_label.c",
        "//Simulator/LVGL.Simulator/lvgl/src/draw/lv_img_decoder.c",
        "//Simulator/LVGL.Simulator/lvgl/src/misc/lv_math.c",
        "//Simulator/LVGL.Simulator/lvgl/src/misc/lv_anim_timeline.c",
        "//Simulator/LVGL.Simulator/lvgl/src/misc/lv_anim.c",
        "//Simulator/LVGL.Simulator/lvgl/src/misc/lv_fs.c",
        "//Simulator/LVGL.Simulator/lvgl/src/misc/lv_txt_ap.c",
        "//Simulator/LVGL.Simulator/lvgl/src/misc/lv_utils.c",
        "//Simulator/LVGL.Simulator/lvgl/src/misc/lv_tlsf.c",
        "//Simulator/LVGL.Simulator/lvgl/src/misc/lv_printf.c",
        "//Simulator/LVGL.Simulator/lvgl/src/misc/lv_timer.c",
        "//Simulator/LVGL.Simulator/lvgl/src/misc/lv_area.c",
        "//Simulator/LVGL.Simulator/lvgl/src/misc/lv_mem.c",
        "//Simulator/LVGL.Simulator/lvgl/src/misc/lv_ll.c",
        "//Simulator/LVGL.Simulator/lvgl/src/misc/lv_log.c",
        "//Simulator/LVGL.Simulator/lvgl/src/misc/lv_color.c",
        "//Simulator/LVGL.Simulator/lvgl/src/misc/lv_templ.c",
        "//Simulator/LVGL.Simulator/lvgl/src/misc/lv_gc.c",
        "//Simulator/LVGL.Simulator/lvgl/src/misc/lv_async.c",
        "//Simulator/LVGL.Simulator/lvgl/src/misc/lv_style_gen.c",
        "//Simulator/LVGL.Simulator/lvgl/src/misc/lv_style.c",
        "//Simulator/LVGL.Simulator/lvgl/src/misc/lv_txt.c",
        "//Simulator/LVGL.Simulator/lvgl/src/misc/lv_bidi.c",
        "//Simulator/LVGL.Simulator/lvgl/src/extra/lv_extra.c",
        "//Simulator/LVGL.Simulator/lvgl/src/extra/layouts/flex/lv_flex.c",
        "//Simulator/LVGL.Simulator/lvgl/src/extra/layouts/grid/lv_grid.c",
        "//Simulator/LVGL.Simulator/lvgl/src/extra/widgets/led/lv_led.c",
        "//Simulator/LVGL.Simulator/lvgl/src/extra/widgets/imgbtn/lv_imgbtn.c",
        "//Simulator/LVGL.Simulator/lvgl/src/extra/widgets/meter/lv_meter.c",
        "//Simulator/LVGL.Simulator/lvgl/src/extra/widgets/spinbox/lv_spinbox.c",
        "//Simulator/LVGL.Simulator/lvgl/src/extra/widgets/chart/lv_chart.c",
        "//Simulator/LVGL.Simulator/lvgl/src/extra/widgets/win/lv_win.c",
        "//Simulator/LVGL.Simulator/lvgl/src/extra/widgets/tileview/lv_tileview.c",
        "//Simulator/LVGL.Simulator/lvgl/src/extra/widgets/keyboard/lv_keyboard.c",
        "//Simulator/LVGL.Simulator/lvgl/src/extra/widgets/colorwheel/lv_colorwheel.c",
        "//Simulator/LVGL.Simulator/lvgl/src/extra/widgets/tabview/lv_tabview.c",
        "//Simulator/LVGL.Simulator/lvgl/src/extra/widgets/spinner/lv_spinner.c",
        "//Simulator/LVGL.Simulator/lvgl/src/extra/widgets/animimg/lv_animimg.c",
        "//Simulator/LVGL.Simulator/lvgl/src/extra/widgets/list/lv_list.c",
        "//Simulator/LVGL.Simulator/lvgl/src/extra/widgets/msgbox/lv_msgbox.c",
        "//Simulator/LVGL.Simulator/lvgl/src/extra/widgets/calendar/lv_calendar.c",
        "//Simulator/LVGL.Simulator/lvgl/src/extra/widgets/calendar/lv_calendar_header_dropdown.c",
        "//Simulator/LVGL.Simulator/lvgl/src/extra/widgets/calendar/lv_calendar_header_arrow.c",
        "//Simulator/LVGL.Simulator/lvgl/src/extra/widgets/span/lv_span.c",
        "//Simulator/LVGL.Simulator/lvgl/src/extra/others/snapshot/lv_snapshot.c",
        "//Simulator/LVGL.Simulator/lvgl/src/extra/themes/mono/lv_theme_mono.c",
        "//Simulator/LVGL.Simulator/lvgl/src/extra/themes/basic/lv_theme_basic.c",
        "//Simulator/LVGL.Simulator/lvgl/src/extra/themes/default/lv_theme_default.c",
        "//Simulator/LVGL.Simulator/lvgl/src/widgets/lv_slider.c",
        "//Simulator/LVGL.Simulator/lvgl/src/widgets/lv_switch.c",
        "//Simulator/LVGL.Simulator/lvgl/src/widgets/lv_roller.c",
        "//Simulator/LVGL.Simulator/lvgl/src/widgets/lv_label.c",
        "//Simulator/LVGL.Simulator/lvgl/src/widgets/lv_bar.c",
        "//Simulator/LVGL.Simulator/lvgl/src/widgets/lv_checkbox.c",
        "//Simulator/LVGL.Simulator/lvgl/src/widgets/lv_btnmatrix.c",
        "//Simulator/LVGL.Simulator/lvgl/src/widgets/lv_textarea.c",
        "//Simulator/LVGL.Simulator/lvgl/src/widgets/lv_img.c",
        "//Simulator/LVGL.Simulator/lvgl/src/widgets/lv_line.c",
        "//Simulator/LVGL.Simulator/lvgl/src/widgets/lv_dropdown.c",
        "//Simulator/LVGL.Simulator/lvgl/src/widgets/lv_btn.c",
        "//Simulator/LVGL.Simulator/lvgl/src/widgets/lv_table.c",
        "//Simulator/LVGL.Simulator/lvgl/src/widgets/lv_arc.c",
        "//Simulator/LVGL.Simulator/lvgl/src/widgets/lv_objx_templ.c",
        "//Simulator/LVGL.Simulator/lvgl/src/widgets/lv_canvas.c",
        "//Simulator/LVGL.Simulator/lvgl/src/font/lv_font_montserrat_28.c",
        "//Simulator/LVGL.Simulator/lvgl/src/font/lv_font_montserrat_42.c",
        "//Simulator/LVGL.Simulator/lvgl/src/font/lv_font_montserrat_14.c",
        "//Simulator/LVGL.Simulator/lvgl/src/font/lv_font.c",
        "//Simulator/LVGL.Simulator/lvgl/src/font/lv_font_montserrat_34.c",
        "//Simulator/LVGL.Simulator/lvgl/src/font/lv_font_montserrat_20.c",
        "//Simulator/LVGL.Simulator/lvgl/src/font/lv_font_montserrat_44.c",
        "//Simulator/LVGL.Simulator/lvgl/src/font/lv_font_montserrat_8.c",
        "//Simulator/LVGL.Simulator/lvgl/src/font/lv_font_unscii_8.c",
        "//Simulator/LVGL.Simulator/lvgl/src/font/lv_font_montserrat_24.c",
        "//Simulator/LVGL.Simulator/lvgl/src/font/lv_font_montserrat_12_subpx.c",
        "//Simulator/LVGL.Simulator/lvgl/src/font/lv_font_fmt_txt.c",
        "//Simulator/LVGL.Simulator/lvgl/src/font/lv_font_unscii_16.c",
        "//Simulator/LVGL.Simulator/lvgl/src/font/lv_font_montserrat_40.c",
        "//Simulator/LVGL.Simulator/lvgl/src/font/lv_font_simsun_16_cjk.c",
        "//Simulator/LVGL.Simulator/lvgl/src/font/lv_font_montserrat_10.c",
        "//Simulator/LVGL.Simulator/lvgl/src/font/lv_font_montserrat_38.c",
        "//Simulator/LVGL.Simulator/lvgl/src/font/lv_font_dejavu_16_persian_hebrew.c",
        "//Simulator/LVGL.Simulator/lvgl/src/font/lv_font_montserrat_30.c",
        "//Simulator/LVGL.Simulator/lvgl/src/font/lv_font_montserrat_12.c",
        "//Simulator/LVGL.Simulator/lvgl/src/font/lv_font_montserrat_18.c",
        "//Simulator/LVGL.Simulator/lvgl/src/font/lv_font_montserrat_32.c",
        "//Simulator/LVGL.Simulator/lvgl/src/font/lv_font_montserrat_28_compressed.c",
        "//Simulator/LVGL.Simulator/lvgl/src/font/lv_font_montserrat_46.c",
        "//Simulator/LVGL.Simulator/lvgl/src/font/lv_font_montserrat_26.c",
        "//Simulator/LVGL.Simulator/lvgl/src/font/lv_font_montserrat_22.c",
        "//Simulator/LVGL.Simulator/lvgl/src/font/lv_font_montserrat_48.c",
        "//Simulator/LVGL.Simulator/lvgl/src/font/lv_font_montserrat_36.c",
        "//Simulator/LVGL.Simulator/lvgl/src/font/lv_font_montserrat_16.c",
        "//Simulator/LVGL.Simulator/lvgl/src/font/lv_font_loader.c",
        "//Simulator/LVGL.Simulator/lvgl/src/core/lv_obj_tree.c",
        "//Simulator/LVGL.Simulator/lvgl/src/core/lv_obj_class.c",
        "//Simulator/LVGL.Simulator/lvgl/src/core/lv_indev_scroll.c",
        "//Simulator/LVGL.Simulator/lvgl/src/core/lv_obj.c",
        "//Simulator/LVGL.Simulator/lvgl/src/core/lv_disp.c",
        "//Simulator/LVGL.Simulator/lvgl/src/core/lv_obj_scroll.c",
        "//Simulator/LVGL.Simulator/lvgl/src/core/lv_event.c",
        "//Simulator/LVGL.Simulator/lvgl/src/core/lv_obj_pos.c",
        "//Simulator/LVGL.Simulator/lvgl/src/core/lv_obj_style.c",
        "//Simulator/LVGL.Simulator/lvgl/src/core/lv_obj_style_gen.c",
        "//Simulator/LVGL.Simulator/lvgl/src/core/lv_indev.c",
        "//Simulator/LVGL.Simulator/lvgl/src/core/lv_refr.c",
        "//Simulator/LVGL.Simulator/lvgl/src/core/lv_obj_draw.c",
        "//Simulator/LVGL.Simulator/lvgl/src/core/lv_theme.c",
        "//Simulator/LVGL.Simulator/lvgl/src/core/lv_group.c",
        "//Simulator/LVGL.Simulator/lvgl/src/gpu/lv_gpu_nxp_pxp_osa.c",
        "//Simulator/LVGL.Simulator/lvgl/src/gpu/lv_gpu_stm32_dma2d.c",
        "//Simulator/LVGL.Simulator/lvgl/src/gpu/lv_gpu_nxp_pxp.c",
        "//Simulator/LVGL.Simulator/lvgl/src/gpu/lv_gpu_nxp_vglite.c",
        "//Simulator/LVGL.Simulator/lvgl/src/hal/lv_hal_tick.c",
        "//Simulator/LVGL.Simulator/lvgl/src/hal/lv_hal_indev.c",
        "//Simulator/LVGL.Simulator/lvgl/src/hal/lv_hal_disp.c",
        "//Simulator/LVGL.Simulator/lvgl/tests/unity/unity_support.c",
        "//Simulator/LVGL.Simulator/lvgl/tests/unity/unity.c",
        "//Simulator/LVGL.Simulator/lvgl/tests/src/lv_test_init.c",
        "//Simulator/LVGL.Simulator/lvgl/tests/src/lv_test_main.c",
        "//Simulator/LVGL.Simulator/lvgl/tests/src/test_cases/_test_template.c",
        "//Simulator/LVGL.Simulator/lvgl/tests/src/test_cases/test_dropdown.c",
        "//Simulator/LVGL.Simulator/lvgl/tests/src/test_cases/test_config.c",
        "//Simulator/LVGL.Simulator/lvgl/tests/src/test_cases/test_style.c",
        "//Simulator/LVGL.Simulator/lvgl/tests/src/test_cases/test_obj_tree.c",
        "//Simulator/LVGL.Simulator/lvgl/tests/src/test_cases/test_font_loader.c",
        "//Simulator/LVGL.Simulator/lvgl/tests/src/lv_test_indev.c",
        "//Simulator/LVGL.Simulator/lvgl/tests/src/test_fonts/font_3.c",
        "//Simulator/LVGL.Simulator/lvgl/tests/src/test_fonts/font_2.c",
        "//Simulator/LVGL.Simulator/lvgl/tests/src/test_fonts/font_1.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/event/lv_example_event_3.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/event/lv_example_event_1.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/event/lv_example_event_2.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/anim/lv_example_anim_3.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/anim/lv_example_anim_timeline_1.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/anim/lv_example_anim_2.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/anim/lv_example_anim_1.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/scroll/lv_example_scroll_1.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/scroll/lv_example_scroll_3.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/scroll/lv_example_scroll_4.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/scroll/lv_example_scroll_5.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/scroll/lv_example_scroll_2.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/scroll/lv_example_scroll_6.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/assets/animimg002.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/assets/img_star.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/assets/img_hand.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/assets/img_skew_strip.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/assets/imgbtn_mid.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/assets/img_cogwheel_indexed16.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/assets/img_caret_down.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/assets/imgbtn_right.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/assets/animimg003.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/assets/img_cogwheel_argb.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/assets/imgbtn_left.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/assets/img_cogwheel_chroma_keyed.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/assets/animimg001.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/assets/img_cogwheel_rgb.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/assets/img_cogwheel_alpha16.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/layouts/flex/lv_example_flex_3.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/layouts/flex/lv_example_flex_6.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/layouts/flex/lv_example_flex_5.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/layouts/flex/lv_example_flex_2.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/layouts/flex/lv_example_flex_1.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/layouts/flex/lv_example_flex_4.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/layouts/grid/lv_example_grid_2.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/layouts/grid/lv_example_grid_3.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/layouts/grid/lv_example_grid_4.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/layouts/grid/lv_example_grid_5.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/layouts/grid/lv_example_grid_6.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/layouts/grid/lv_example_grid_1.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/widgets/label/lv_example_label_2.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/widgets/label/lv_example_label_1.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/widgets/label/lv_example_label_3.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/widgets/table/lv_example_table_2.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/widgets/table/lv_example_table_1.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/widgets/led/lv_example_led_1.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/widgets/img/lv_example_img_1.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/widgets/img/lv_example_img_3.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/widgets/img/lv_example_img_2.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/widgets/img/lv_example_img_4.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/widgets/textarea/lv_example_textarea_2.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/widgets/textarea/lv_example_textarea_3.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/widgets/textarea/lv_example_textarea_1.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/widgets/imgbtn/lv_example_imgbtn_1.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/widgets/canvas/lv_example_canvas_2.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/widgets/canvas/lv_example_canvas_1.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/widgets/dropdown/lv_example_dropdown_1.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/widgets/dropdown/lv_example_dropdown_2.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/widgets/dropdown/lv_example_dropdown_3.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/widgets/meter/lv_example_meter_1.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/widgets/meter/lv_example_meter_2.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/widgets/meter/lv_example_meter_4.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/widgets/meter/lv_example_meter_3.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/widgets/btn/lv_example_btn_1.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/widgets/btn/lv_example_btn_2.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/widgets/btn/lv_example_btn_3.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/widgets/spinbox/lv_example_spinbox_1.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/widgets/chart/lv_example_chart_4.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/widgets/chart/lv_example_chart_7.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/widgets/chart/lv_example_chart_5.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/widgets/chart/lv_example_chart_2.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/widgets/chart/lv_example_chart_6.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/widgets/chart/lv_example_chart_3.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/widgets/chart/lv_example_chart_1.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/widgets/switch/lv_example_switch_1.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/widgets/arc/lv_example_arc_2.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/widgets/arc/lv_example_arc_1.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/widgets/checkbox/lv_example_checkbox_1.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/widgets/bar/lv_example_bar_1.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/widgets/bar/lv_example_bar_3.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/widgets/bar/lv_example_bar_2.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/widgets/bar/lv_example_bar_4.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/widgets/bar/lv_example_bar_5.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/widgets/bar/lv_example_bar_6.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/widgets/win/lv_example_win_1.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/widgets/tileview/lv_example_tileview_1.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/widgets/line/lv_example_line_1.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/widgets/keyboard/lv_example_keyboard_1.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/widgets/colorwheel/lv_example_colorwheel_1.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/widgets/tabview/lv_example_tabview_1.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/widgets/tabview/lv_example_tabview_2.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/widgets/spinner/lv_example_spinner_1.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/widgets/animimg/lv_example_animimg_1.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/widgets/list/lv_example_list_1.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/widgets/slider/lv_example_slider_3.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/widgets/slider/lv_example_slider_1.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/widgets/slider/lv_example_slider_2.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/widgets/msgbox/lv_example_msgbox_1.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/widgets/calendar/lv_example_calendar_1.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/widgets/roller/lv_example_roller_1.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/widgets/roller/lv_example_roller_2.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/widgets/roller/lv_example_roller_3.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/widgets/span/lv_example_span_1.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/widgets/btnmatrix/lv_example_btnmatrix_1.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/widgets/btnmatrix/lv_example_btnmatrix_2.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/widgets/btnmatrix/lv_example_btnmatrix_3.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/porting/lv_port_indev_template.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/porting/lv_port_fs_template.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/porting/lv_port_disp_template.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/get_started/lv_example_get_started_2.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/get_started/lv_example_get_started_3.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/get_started/lv_example_get_started_1.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/styles/lv_example_style_1.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/styles/lv_example_style_7.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/styles/lv_example_style_9.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/styles/lv_example_style_14.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/styles/lv_example_style_10.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/styles/lv_example_style_3.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/styles/lv_example_style_12.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/styles/lv_example_style_13.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/styles/lv_example_style_4.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/styles/lv_example_style_8.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/styles/lv_example_style_2.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/styles/lv_example_style_11.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/styles/lv_example_style_6.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/styles/lv_example_style_5.c",
        "//Simulator/LVGL.Simulator/lvgl/examples/others/snapshot/lv_example_snapshot_1.c",
        "//Simulator/LVGL.Simulator/lv_fs_if/lv_fs_posix.c",
        "//Simulator/LVGL.Simulator/lv_fs_if/lv_fs_if.c",
        "//Simulator/LVGL.Simulator/lv_fs_if/lv_fs_pc.c",
        "//Simulator/LVGL.Simulator/lv_fs_if/lv_fs_fatfs.c",
        "//Simulator/LVGL.Simulator/lv_drivers/display/GC9A01.c",
        "//Simulator/LVGL.Simulator/lv_drivers/display/SHARP_MIP.c",
        "//Simulator/LVGL.Simulator/lv_drivers/display/UC1610.c",
        "//Simulator/LVGL.Simulator/lv_drivers/display/drm.c",
        "//Simulator/LVGL.Simulator/lv_drivers/display/SSD1963.c",
        "//Simulator/LVGL.Simulator/lv_drivers/display/ST7565.c",
        "//Simulator/LVGL.Simulator/lv_drivers/display/R61581.c",
        "//Simulator/LVGL.Simulator/lv_drivers/display/ILI9341.c",
        "//Simulator/LVGL.Simulator/lv_drivers/display/monitor.c",
        "//Simulator/LVGL.Simulator/lv_drivers/display/fbdev.c",
        "//Simulator/LVGL.Simulator/lv_drivers/win32drv/win32drv.c",
        "//Simulator/LVGL.Simulator/lv_drivers/indev/libinput.c",
        "//Simulator/LVGL.Simulator/lv_drivers/indev/AD_touch.c",
        "//Simulator/LVGL.Simulator/lv_drivers/indev/keyboard.c",
        "//Simulator/LVGL.Simulator/lv_drivers/indev/XPT2046.c",
        "//Simulator/LVGL.Simulator/lv_drivers/indev/mousewheel.c",
        "//Simulator/LVGL.Simulator/lv_drivers/indev/mouse.c",
        "//Simulator/LVGL.Simulator/lv_drivers/indev/evdev.c",
        "//Simulator/LVGL.Simulator/lv_drivers/indev/FT5406EE8.c",
        "//Simulator/LVGL.Simulator/lv_drivers/wayland/wayland.c",
        "//Simulator/LVGL.Simulator/lv_drivers/gtkdrv/gtkdrv.c",
        "//Simulator/LVGL.Simulator/lv_drivers/win_drv.c"
    ]

    include_dirs = [
        "//Simulator/LVGL.Simulator/"
    ]

    cflags_c = [
        "-std=c99"
    ]

    cflags_cc = [
        "-std=c++11"
    ]

    cflags = [
        "-D_GNU_SOURCE",
        "-pthread",
        "-DLINUX",
        "-DUSE_WIN32DRV=0",
        "-DUSE_FBDEV=1"
    ]

    if (chip_type == "hi3559v200") {
        cflags += [
            "-DLV_FS_POSIX_PATH=\"/app/sd\"",
            "-DLV_HOR_RES=320",
            "-DLV_VER_RES=240",
            "-DDISP_HOR_RES=320",
            "-DDISP_VER_RES=240",
        ]
    } else {
        cflags += [
            "-DLV_FS_POSIX_PATH=\".\"",
            "-DLV_HOR_RES=240",
            "-DLV_VER_RES=240",
            "-DDISP_HOR_RES=240",
            "-DDISP_VER_RES=240"
        ]
    }

    ldflags = [
    ]

    if (is_linux) {
        ldflags += [
            "-D_GNU_SOURCE",
            "-pthread",
            "-lm"
        ]
    }

    output_dir = "${root_out_dir}/lib"
}
